# pdf-chunker

./: .gitignore  README.md  project-plan.md  pyproject.toml
src/pdf_chunker/: __init__.py  cli.py  config.py  exceptions.py  models.py  pipeline.py
src/pdf_chunker/chunking/: base.py  postprocess.py  structural_chunker.py  window_chunker.py
src/pdf_chunker/conversion/: cleaner.py  image_handler.py  markdown_writer.py
src/pdf_chunker/ingestion/: extractor.py  loader.py  table_extractor.py
src/pdf_chunker/output/: json_writer.py  markdown_writer.py
tests/: conftest.py  test_acceptance_slice1.py  test_acceptance_v02.py  test_acceptance_v03.py  test_acceptance_v04.py  test_cleaner.py  test_postprocess.py
